# ClimeAI

./: .env.example  .gitmodules  Dockerfile  ENVIRONMENT_VARIABLES.md  README.md  main.py  pyproject.toml
agents/: agent_utils.py  climeai_agent.py  event_advisor_agent.py  tools.py  travel_advisor_agent.py
configurations/: config.py  db.py
coralized_agents/Clime-AI-Agent/: .env_sample  README.md  coral-agent.toml  main.py  pyproject.toml
coralized_agents/Clime-AI-Agent/.github/workflows/: docker-image.yml
coralized_agents/Coral-Interface-Agent/: main.py
coralized_agents/Event-Advisor-Weather-Agent/: README.md  coral-agent.toml  main.py  pyproject.toml
coralized_agents/Event-Advisor-Weather-Agent/.github/workflows/: docker-image.yml
coralized_agents/Travel-Advisor-Weather-Agent/: .env_sample  README.md  coral-agent.toml  main.py  pyproject.toml
coralized_agents/Travel-Advisor-Weather-Agent/.github/workflows/: docker-image.yml
models/: chat_model.py
routes/: ENDPOINTS.md  chat_routes.py  event_advisor_routes.py  health_check_routes.py  travel_advisor_routes.py
utils/: chat_agent_utils.py  llm.py  voice_utils.py
