[tool.poetry]
name = "climeai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.13,<4.0"
fastapi = ">=0.116.2"
langchain = ">=0.3.27"
langchain-aimlapi = ">=0.1.0"
langchain-community = ">=0.3.29"
langchain-core = ">=0.3.76"
langchain-google-genai = ">=2.1.12"
langchain-groq = ">=0.3.8"
langchain-mistralai = ">=0.2.11"
langgraph = ">=0.6.7"
langgraph-checkpoint-mongodb = ">=0.2.0"
pyjwt = ">=2.10.1"
sqlmodel = ">=0.0.24"
uvicorn = {extras = ["standard"], version = ">=0.35.0"}
elevenlabs = "^2.16.0"
python-multipart = "^0.0.20"

[tool.uv.workspace]
members = [
    "langchain_mistralai",
]
